# assignment5/cashflow-svc/docs/internal/proto/wallet_service/v1/wallet.swagger.json
@@ -143,6 +143,74 @@
         ]
       }
     },
+    "/v1/transaction": {
+      "get": {
+        "operationId": "GetTransactions",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/internal.proto.wallet_service.v1.GetTransactionResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userID",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "walletID",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "startDate",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "endDate",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "internal.proto.wallet_service.v1.walletService"
+        ]
+      },
+      "post": {
+        "operationId": "CreateTransaction",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/internal.proto.wallet_service.v1.MutationTransactionResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/internal.proto.wallet_service.v1.CreateTransactionRequest"
+            }
+          }
+        ],
+        "tags": [
+          "internal.proto.wallet_service.v1.walletService"
+        ]
+      }
+    },
     "/v1/transfer": {
       "post": {
         "operationId": "TransferWallet",
@@ -332,6 +400,23 @@
         }
       }
     },
+    "internal.proto.wallet_service.v1.CreateTransactionRequest": {
+      "type": "object",
+      "properties": {
+        "walletID": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "categoryID": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "nominal": {
+          "type": "number",
+          "format": "float"
+        }
+      }
+    },
     "internal.proto.wallet_service.v1.CreateWalletRequest": {
       "type": "object",
       "properties": {
@@ -365,6 +450,18 @@
       "properties": {
         "category": {
           "$ref": "#/definitions/internal.proto.wallet_service.v1.Category"
+        }
+      }
+    },
+    "internal.proto.wallet_service.v1.GetTransactionResponse": {
+      "type": "object",
+      "properties": {
+        "transactions": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/internal.proto.wallet_service.v1.Transaction"
+          }
         }
       }
     },
@@ -404,11 +501,53 @@
         }
       }
     },
+    "internal.proto.wallet_service.v1.MutationTransactionResponse": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string"
+        }
+      }
+    },
     "internal.proto.wallet_service.v1.MutationTransferResponse": {
       "type": "object",
       "properties": {
         "message": {
           "type": "string"
+        }
+      }
+    },
+    "internal.proto.wallet_service.v1.Transaction": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "walletID": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "walletName": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        },
+        "nominal": {
+          "type": "number",
+          "format": "float"
+        },
+        "categoryId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "categoryName": {
+          "type": "string"
+        },
+        "transactionDate": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
