# assignment5/cashflow-svc/internal/model/filterTransaction.go
@@ -1,0 +1,10 @@
+package model
+
+import "time"
+
+type FilterTransaction struct {
+	StartTime *time.Time
+	EndTime   *time.Time
+	WalletID  []int32
+	UserID    int32
+}
