# assignment5/cashflow-svc/internal/model/transactionRequest.go
@@ -1,0 +1,7 @@
+package model
+
+type TransactionRequest struct {
+	WalletID   int32
+	CategoryID int32
+	Nominal    float64
+}
